[package]
name = "concurrent-skiplist"
version = "0.1.0"
edition = "2021"
include = ["zig-out/include/skiplist.h"]

[dependencies]
crossbeam-skiplist = "0.1.3"
lazy_static = "1.4"
libc = "0.2"
tikv-jemallocator = "0.5"

[dev-dependencies]
cbindgen = "0.29"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = "fat"




